creusot/tests/should_fail/prusti/traits/curr.stderr
error: the expression's lifetime `'a` must match the current time slice `'now` (found `&'a mut Y`, expected `&'now mut _`)
  --> curr.rs:15:5
   |
15 |     fn test<'now, Y>(x: &'now mut Y) -> &'now mut Y {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

